# course_work_5

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
database/: DBCreator.py  DBManager.py
src/: config.py  utils.py
